Add Apache License and update project metadata
* Introduced LICENSE file with Apache License 2.0 terms.
* Updated pyproject.toml to reference the new LICENSE file and added license classifiers.
* Modified README.md to use HTML for logo display for better compatibility.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,11 @@ description = "OptiGen is a tool for automatically generating optimization proje
 authors = [
     { name = "Amir Rajabi", email = "amir@optigen.io" },
 ]
+license = { file = "LICENSE" }
 readme = "README.md"
+classifiers = [
+    "License :: OSI Approved :: Apache Software License",
+]
 requires-python = ">=3.11,<4.0"
 dependencies = [
     "langgraph>=1.0.0",
