--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,9 +20,14 @@ dependencies = [
     "python-dotenv>=1.0.1",
     "langchain-tavily>=0.1",
     "deepagents>=0.3.0",
+    "rich>=14.2.0",
+    "prompt-toolkit>=3.0.52",
+    "tavily>=1.1.0",
     "pyomo>=6.9.5",
-    "ortools>=9.14.6206",
 ]
+
+[project.scripts]
+optigen = "deepagents_cli.main:cli_main"
 
 
 [project.optional-dependencies]
@@ -33,10 +38,11 @@ requires = ["setuptools>=73.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-packages = ["langgraph.templates.react_agent", "react_agent"]
+packages = ["react_agent", "deepagents_cli"]
 [tool.setuptools.package-dir]
 "langgraph.templates.react_agent" = "src/react_agent"
 "react_agent" = "src/react_agent"
+"deepagents_cli" = "src/deepagents_cli"
 
 
 [tool.setuptools.package-data]
@@ -47,9 +53,6 @@ lint.select = [
     "E",    # pycodestyle
     "F",    # pyflakes
     "I",    # isort
-    "D",    # pydocstyle
-    "D401", # First line should be in imperative mood
-    "T201",
     "UP",
 ]
 lint.ignore = [
@@ -60,6 +63,8 @@ lint.ignore = [
     # Relax the convention by _not_ requiring documentation for every function parameter.
     "D417",
     "E501",
+    "E402",
+    "F401",
 ]
 [tool.ruff.lint.per-file-ignores]
 "tests/*" = ["D", "UP"]
