--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,21 @@ license = { file = "LICENSE" }
 readme = "README.md"
 classifiers = [
     "License :: OSI Approved :: Apache Software License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.11",
+    "Operating System :: OS Independent",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Intended Audience :: Developers",
+    "Development Status :: 4 - Beta",
 ]
 requires-python = ">=3.11,<4.0"
+
+[project.urls]
+Homepage = "https://github.com/OptigenIO/OptiGen-core"
+Repository = "https://github.com/OptigenIO/OptiGen-core"
+Issues = "https://github.com/OptigenIO/OptiGen-core/issues"
+
 dependencies = [
     "langgraph>=1.0.0",
     "langchain-openai>=0.1.22",
