--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,11 +50,10 @@ requires = ["setuptools>=73.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-packages = ["react_agent", "deepagents_cli"]
+packages = {find = {}}
 [tool.setuptools.package-dir]
+"" = "src"
 "langgraph.templates.react_agent" = "src/react_agent"
-"react_agent" = "src/react_agent"
-"deepagents_cli" = "src/deepagents_cli"
 
 
 [tool.setuptools.package-data]
