--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,9 @@ description = "OptiGen is a tool for automatically generating optimization proje
 authors = [
     { name = "Amir Rajabi", email = "amir@optigen.io" },
 ]
-license = { file = "LICENSE" }
+license = { text = "Apache-2.0" }
 readme = "README.md"
 classifiers = [
-    "License :: OSI Approved :: Apache Software License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.11",
     "Operating System :: OS Independent",
@@ -50,7 +49,7 @@ requires = ["setuptools>=73.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-packages = {find = {}}
+packages = ["react_agent", "deepagents_cli", "deepagents_cli.integrations"]
 [tool.setuptools.package-dir]
 "" = "src"
 "langgraph.templates.react_agent" = "src/react_agent"
