--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,8 @@ requires = ["setuptools>=73.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-packages = {find = {where = ["src"], namespaces = false}}
+# Automatically discover all packages and subpackages in src/
+packages = {find = {where = ["src"]}}
 [tool.setuptools.package-dir]
 "" = "src"
 "langgraph.templates.react_agent" = "src/react_agent"
