Enhance project configuration and integration features
* Updated .env.example to include CONTEXT7_API_KEY for optional Context7 integration.
* Modified .gitignore to include working_directory and ensure cleaner project management.
* Changed graph creation function reference in langgraph.json for clarity.
* Added langchain-mcp-adapters dependency in pyproject.toml to support new features.
* Enhanced README.md with Context7 integration instructions and updated API key usage.
* Refactored graph.py to support additional tools from MCP and improved subagent management.
* Updated prompts.py to encourage proactive use of documentation tools during code generation.
* Adjusted tests to align with changes in graph creation and context handling.

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,7 @@ LANGSMITH_API_KEY=....
 
 ## LLM choice:
 ANTHROPIC_API_KEY=....
+
+## Optional: Context7 Integration for documentation search
+## Get your API key at: https://context7.com/dashboard
+CONTEXT7_API_KEY=....
