Enhance project configuration and testing workflows
* Updated .gitignore to include IDE settings and ensure cleaner project management.
* Refactored Makefile to use 'uv' for running tests and linting, improving consistency in command execution.
* Added spell checking functionality to the Makefile and CI workflows.
* Updated integration and unit test workflows to streamline dependency installation and execution.
* Included codespell as a dependency in pyproject.toml for improved code quality checks.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,9 +42,6 @@ Issues = "https://github.com/OptigenIO/OptiGen-core/issues"
 optigen = "deepagents_cli.main:cli_main"
 
 
-[project.optional-dependencies]
-dev = ["mypy>=1.11.1", "ruff>=0.6.1", "pytest>=8.3.5"]
-
 [build-system]
 requires = ["setuptools>=73.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
@@ -91,9 +88,16 @@ exclude = [
     "src/deepagents_cli/.*",
 ]
 
+[tool.codespell]
+skip = ".git,.venv,.mypy_cache,.ruff_cache,.pytest_cache,*.egg-info,uv.lock,working_directory,.langgraph_api"
+ignore-words = ".codespellignore"
+
 [dependency-groups]
 dev = [
     "anyio>=4.7.0",
     "langgraph-cli[inmem]>=0.4.7",
     "pytest>=8.3.5",
+    "mypy>=1.11.1",
+    "ruff>=0.6.1",
+    "codespell>=2.3.0",
 ]
